<resources>
    <string name="app_name">Cafe Order</string>
    <string name="logo_description">Логотип кафе</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите ваше имя</string>
    <string name="hint_password">Введите ваш пароль</string>
    <string name="button_create_order">СОЗДАТЬ ЗАКАЗ</string>
    <string name="warning_fill_fields">"Все поля должны быть заполнены"</string>
    <string name="tea">Чай</string>
    <string name="coffe">Кофе</string>

    <string-array name="options_of_coffe">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Латте</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Чёрный</item>
        <item>Зелёный</item>
        <item>Красный</item>
    </string-array>
</resources>